--- a/javascript-moderno/index.html
+++ b/javascript-moderno/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--SCRIPTS-->
-    <script src="scripts/01-variables.js"></script>
+    <script src="scripts/02-strings.js"></script>
 
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/styles.css" />
@@ -14,5 +14,7 @@
 </head>
 <body>
     <h1>Aprendiendo Javascript Moderno</h1>
+
+    <div id="contenedor"></div>
 </body>
 </html>
