--- a/javascript-moderno/index.html
+++ b/javascript-moderno/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--SCRIPTS-->
-    <script src="scripts/03-tipos-datos.js"></script>
+    <script src="scripts/05-bucles.js"></script>
 
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/styles.css" />
