--- a/javascript-moderno/index.html
+++ b/javascript-moderno/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--SCRIPTS-->
-    <script src="scripts/12-async-await.js"></script>
+    <script type="module" src="scripts/13-modulos.js"></script>
 
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>Aprendiendo Javascript Moderno</title>
 </head>
+
 <body>
     <h1>Aprendiendo Javascript Moderno</h1>
 
     <div id="contenedor"></div>
 </body>
+
 </html>
