--- a/javascript-moderno/index.html
+++ b/javascript-moderno/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--SCRIPTS-->
-    <script type="module" src="scripts/13-modulos.js"></script>
+    <script type="module" src="scripts/16-closures.js"></script>
 
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/styles.css" />
