--- a/javascript-moderno/index.html
+++ b/javascript-moderno/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--SCRIPTS-->
-    <script src="scripts/17-clases.js"></script>
+    <script src="scripts/19-maps.js"></script>
 
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/styles.css" />
