--- a/javascript-moderno/index.html
+++ b/javascript-moderno/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--SCRIPTS-->
-    <script src="scripts/19-maps.js"></script>
-
     <!--ESTILOS-->
     <link rel="stylesheet" href="css/styles.css" />
 
@@ -17,7 +14,12 @@
 <body>
     <h1>Aprendiendo Javascript Moderno</h1>
 
-    <div id="contenedor"></div>
+    <div class="container"></div>
+    <div class="container"></div>
+    <div class="container"></div>
+
+    <!--SCRIPTS-->
+    <script src="scripts/20-dom.js"></script>
 </body>
 
 </html>
